frontend/tests/cases/negative/notInScopeInterfaceAsConstraintToInstance.gr
interface Simple a where
  simple : a -> a

data SimpleDT a = SDT

-- interface Simple1 is not in scope
instance (Simple1 a) => Simple (SimpleDT a) where
  simple x = x
